# prir-parallel-dictionary

./: CMakeLists.txt  README.md  build_and_run.sh  command_line.cc  command_line.cpp  command_line.h  main.cc  main.cpp  performance_reporter.cpp  performance_reporter.h  test
assets/: 10k.csv  40.csv
dictionary/: dictionary.cpp  dictionary.h
parallel/: finder.cpp  finder.h
testing/: benchmark_test.cpp  benchmark_test.h  dictionary_test.cpp  dictionary_test.h  file_test.cpp  file_test.h  main_test.cpp  report_creation_test.cpp  report_creation_test.h  serialization_test.cpp  serialization_test.h
utils/: benchmark.cpp  benchmark.h  command_line.cpp  command_line.h  file.cpp  file.h  performance_reporter.cpp  performance_reporter.h  report_creation.cpp  report_creation.h  serialization.cpp  serialization.h
